navbar: fix collapsing speed

--- a/frontend/global/scss/plugins/_nav.scss
+++ b/frontend/global/scss/plugins/_nav.scss
@@ -117,22 +117,22 @@ body.navbar-fixed {
                     font-size: $font-size;
                 }
             }
-            .navbar-collapse {
-
-                &.show, &.collapsing {
-                    .menu-column {
-                        .menu-container {
-                            position: fixed;
-                            margin-left: -15px;
-                            overflow-y: scroll;
-                            background: white;
-                            .metismenu {
-                                width: 100%;
-                                position: absolute;
-                            }
+            .navbar-toggler[aria-expanded=true] ~ .navbar-collapse {
+                .menu-column {
+                    .menu-container {
+                        position: fixed;
+                        margin-left: -15px;
+                        overflow-y: scroll;
+                        background: white;
+                        .metismenu {
+                            width: 100%;
+                            position: absolute;
                         }
                     }
                 }
+            }
+            .navbar-toggler[aria-expanded=false] ~ .navbar-collapse {
+                display: none;
             }
         }
     }
